# weather_routing

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  smoke_train.yml  train_dispatch.yml
configs/: config.yaml
configs/cluster/: cloud.yaml  local.yaml  slurm.yaml
configs/dataloader/: era5_arco_bog.yaml  era5_cds_bog.yaml
configs/experiment/: assim_dps.yaml  assim_enkf.yaml  assim_nudging.yaml  finetune_bog.yaml
configs/fetchers/: all_open.yaml  cmems_ascat.yaml  synthetic_only.yaml
configs/fetchers/source/: ascat.yaml  cmems.yaml  synthetic.yaml  vos.yaml
configs/module/: archesweathergen_finetune.yaml
configs/route/: default.yaml
docs/: architecture.md
infra/training/: .terraform.lock.hcl  README.md  cloud-init.yaml  main.tf  outputs.tf  variables.tf
notebooks/: 00_overview.ipynb
scripts/: Dockerfile  push_checkpoint.sh  run_local.sh  setup_training.sh  slurm.sbatch  smoke_train.sh
src/wxrouting/: __init__.py
src/wxrouting/assim/: __init__.py  base.py  dps.py  enkf.py  nudging.py
src/wxrouting/cli/: __init__.py  assimilate.py  train.py
src/wxrouting/data/: __init__.py  cf_names.py  crop.py  era5_arco.py  era5_cds.py  registry.py
src/wxrouting/data/fetchers/: __init__.py  aishub.py  ascat.py  base.py  cmems_insitu.py  emodnet_ais.py  synthetic_ais.py  vos_gts.py
src/wxrouting/data/obs/: __init__.py  adapter.py  ais.py  ascat.py  base.py  buoys.py  operators.py  windfarm.py
src/wxrouting/finetune/: __init__.py  callbacks.py  freeze.py  lightning_module.py
src/wxrouting/routing/: __init__.py  cli.py  dp.py  ensemble.py  field.py  geo.py  isochrone.py  polar.py  risk.py  robust.py
src/wxrouting/routing/polars/: generic_monohull.pol
tests/: test_adapter.py  test_assimilate_cli.py  test_crop.py  test_era5_arco.py  test_fetcher_synthetic.py  test_fetchers.py  test_finetune.py  test_hydra_compose.py  test_imports.py  test_obs_H.py  test_routing.py
