[project]
name = "wxrouting"
version = "0.1.0"
description = "Fine-tuning ArchesWeatherGen on the Bay of Biscay + data assimilation of opportunistic obs (course material)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Loïc Maurin" }]
license = { text = "MIT" }

dependencies = [
    # Modèle météo — geoarches (INRIA) n'est pas sur PyPI, en extra `model`
    "torch>=2.3",
    "lightning>=2.3",
    "diffusers>=0.30",            # pour les schedulers de diffusion utilisés en DPS
    # Configs & expériences
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    # Données
    "xarray>=2024.2",
    "zarr>=2.17",
    "dask[distributed]>=2024.5",
    "gcsfs>=2024.5",              # ARCO-ERA5 sur GCS
    "fsspec>=2024.5",
    "cdsapi>=0.7",                # Copernicus CDS
    "netcdf4>=1.6",
    "h5netcdf>=1.3",
    # Obs
    "pandas>=2.2",
    "geopandas>=1.0",
    "pyais>=2.6",                 # parsing AIS
    "scipy>=1.13",
    "numpy>=1.26,<2.1",
    # Plot / cours
    "matplotlib>=3.8",
    "cartopy>=0.23",
    "jupyterlab>=4.2",
    # Outils
    "tqdm",
    "rich",
    "tensorboard",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit",
]
# Le modèle pré-entraîné — pas sur PyPI, installé depuis le git INRIA.
# `uv pip install -e ".[model]"` ou ajouter à uv.sources.
model = [
    "geoarches @ git+https://github.com/INRIA/geoarches.git",
]
# Accès aux observations réelles (comptes gratuits requis).
obs = [
    "earthaccess>=0.9",       # ASCAT via PO.DAAC / NASA Earthdata
    "copernicusmarine>=1.3",  # CMEMS in-situ
]

[project.scripts]
wxr-train = "wxrouting.cli.train:main"
wxr-assim = "wxrouting.cli.assimilate:main"
wxr-route = "wxrouting.routing.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wxrouting"]

[tool.hatch.metadata]
allow-direct-references = true   # autorise `pkg @ git+https://...` dans les extras

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
